syntax = "proto3";

package com.github.dodo_cli.dodo_core.api.v1alpha1;

option go_package = "github.com/dodo-cli/dodo-core/api/v1alpha1";

import "google/protobuf/empty.proto";
import "api/v1alpha1/plugin.proto";
import "api/v1alpha1/backdrop.proto";

service ConfigurationPlugin {
  rpc GetPluginInfo(google.protobuf.Empty) returns (com.github.dodo_cli.dodo_core.api.v1alpha1.PluginInfo);

  rpc ListBackdrops(google.protobuf.Empty) returns (ListBackdropsResponse);
  rpc GetBackdrop(GetBackdropRequest) returns (com.github.dodo_cli.dodo_core.api.v1alpha1.Backdrop);
}

message ListBackdropsResponse {
  repeated com.github.dodo_cli.dodo_core.api.v1alpha1.Backdrop backdrops = 1;
}

message GetBackdropRequest {
  string alias = 1;
}
