syntax = "proto3";
package com.github.dodo_cli.dodo_core.types;

option go_package = "github.com/dodo-cli/dodo-core/pkg/types";

message Empty {}

message ContainerId {
  string id = 1;
}

message Backdrop {
  string name = 1;
  repeated string aliases = 2;
  string container_name = 3;

  string image_id = 4;
  Entrypoint entrypoint = 5;

  repeated Environment environment = 6;
  repeated Volume volumes = 7;
  repeated Device devices = 8;
  repeated Port ports = 9;

  repeated string capabilities = 10;

  string user = 11;
  string working_dir = 12;
}

message Entrypoint {
  bool interactive = 1;
  string script = 2;
  repeated string interpreter = 3;
  repeated string arguments = 4;
}

message Environment {
  string key = 1;
  string value = 2;
}

message Volume {
  string source = 1;
  string target = 2;
  bool readonly = 3;
}

message Device {
  string source = 1;
  string target = 2;
  string permissions = 3;
}

message Port {
  int32 target = 1;
  int32 published = 2;
  string protocol = 3;
  string host_ip = 4;
}

message Result {
  int64 exitCode = 1;
  string message = 2;
}

service Configuration {
  rpc Init(Empty) returns (Empty);
  rpc UpdateConfiguration(Backdrop) returns (Backdrop);
  rpc Provision(ContainerId) returns (Empty);
}
